<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="6dp">
	
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/login" 
		android:layout_marginBottom="6dp"/>
	
	<EditText android:id="@+id/username" 
		android:singleLine="true"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:hint="@string/user_at_domain" />
	
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:text="@string/password" 
		android:layout_marginBottom="6dp"/>
	
	<EditText android:id="@+id/password" android:password="true"
		android:singleLine="true" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:padding="6dp"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<Button android:id="@+id/login_button"
			android:text="@string/login_button"
			android:layout_width="0dp"
			android:layout_weight="1" 
			android:layout_height="wrap_content" />
		
		<Button android:id="@+id/cancel_button" 
			android:text="@string/cancel_button"
			android:layout_width="0dp"
			android:layout_weight="1" 
			android:layout_height="wrap_content" />
			
	</LinearLayout>

</LinearLayout>
