<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/wrapper" 
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical" android:padding="6dp" android:minWidth="240dp">

	<AutoCompleteTextView android:id="@+id/recipient" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textSize="16sp" android:layout_marginBottom="2dp"
		android:gravity="center_vertical" android:hint="@string/user_at_domain" />
	
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/okButton"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:text="@string/ok_button">
		</Button>
		<Button android:id="@+id/cancelButton"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:text="@string/cancel_button">
		</Button>

	</LinearLayout>

</LinearLayout>
