<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/sendTextTabLayout" xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:scrollbars="vertical" android:background="@color/OSWbackground">
	
	<LinearLayout android:id="@+id/bottomButtons"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
		
		<LinearLayout android:id="@+id/actionButtons"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@color/OSWtopbar" android:padding="6dip">
	
			<Button android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="50" android:id="@+id/postButton" android:text="@string/comment_button" />

			<Button android:id="@+id/cancelButton"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="50" android:text="@string/cancel_button" />
	
		</LinearLayout>

	</LinearLayout>
	
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_above="@id/bottomButtons" >
	
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" >
		
			<LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:paddingTop="6dp" 
				android:paddingLeft="6dp" android:paddingRight="6dp" >
				<EditText android:layout_width="fill_parent" android:layout_height="100dp"
					android:textSize="14sp" android:autoText="false"
					android:gravity="top" android:capitalize="sentences" android:id="@+id/editText" android:hint="@string/your_comment" />
			</LinearLayout>

		</LinearLayout>
		
	</ScrollView>
		
</RelativeLayout>