<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/sendTextTabLayout" xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:scrollbars="vertical" android:background="@color/OSWbackground">
	
	<LinearLayout android:id="@+id/bottomButtons"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
		
		<LinearLayout android:id="@+id/actionButtons"
			android:orientation="horizontal" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@color/OSWtopbar" android:padding="6dip">
	
			<Button android:id="@+id/shareButton"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="50" android:text="@string/share_button">
			</Button>
			<Button android:id="@+id/cancelButton"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="50" android:text="@string/cancel_button">
			</Button>
	
		</LinearLayout>

	</LinearLayout>
	
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_above="@id/bottomButtons" >
	
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" >
		
			<LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:paddingTop="6dp" 
				android:paddingLeft="6dp" android:paddingRight="6dp" >
				<EditText android:id="@+id/shareText"
					android:layout_width="fill_parent" android:layout_height="100dp"
					android:textSize="14sp" android:autoText="false"
					android:gravity="top" android:capitalize="sentences" android:hint="@string/whats_up"/>
			</LinearLayout>
			
			<LinearLayout android:id="@+id/messageButtons"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingLeft="6dip"
				android:paddingRight="6dip" android:paddingBottom="6dip">
		
				<ImageButton android:id="@+id/privacyButton"
					android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_btn_privacy" />
				<ImageButton android:id="@+id/shoutButton" android:src="@drawable/ic_btn_add_recipient"
					android:layout_width="wrap_content" android:layout_height="wrap_content" />
		
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:id="@+id/privacyContainer" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingBottom="6dp" 
				android:paddingLeft="10dip" android:paddingRight="10dip" >
				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginRight="6dip"
					android:layout_gravity="center_vertical" android:src="@drawable/ic_btn_privacy_small" />
				<TextView android:layout_height="wrap_content" android:id="@+id/privacyLabel"
					android:layout_width="fill_parent" android:textSize="14sp"
					android:text="@string/visible_to_everyone" android:gravity="left"
					android:textColor="@color/grey3" />
			</LinearLayout>
			
			<LinearLayout android:orientation="horizontal"
				android:id="@+id/shoutContainer" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:paddingBottom="6dp" 
				android:paddingLeft="10dip" android:paddingRight="10dip" android:visibility="gone">
				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_marginRight="6dp" android:layout_marginTop="3dp"
					android:layout_gravity="top" android:src="@drawable/ic_btn_recipients_small" />
				<LinearLayout android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="wrap_content" >
					<TextView android:layout_height="wrap_content" android:id="@+id/shoutLabel"
						android:layout_width="fill_parent" android:textSize="14sp"
						android:text="@string/shout" android:gravity="left"
						android:textColor="@color/grey3" />
						<LinearLayout android:orientation="vertical" android:id="@+id/recipients"
							android:layout_width="fill_parent" android:layout_height="wrap_content"
							android:paddingTop="6dp" />
				</LinearLayout>
			</LinearLayout>
		
		</LinearLayout>
		
	</ScrollView>
		
</RelativeLayout>